# CS202_Project

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_sample.py  test.c
cfg_optimizer/: __init__.py  analysis.py  ast_parser.py  benchmark.py  callgraph.py  cfg.py  cli.py  optimizer.py  render.py  visualize.py
examples/input/: sample.c
output/: test.callgraph.dot  test.foo.cfg.dot  test.master_optimizer_test.cfg.dot  test.master_optimizer_test.optimized.cfg.dot  test.my_func.cfg.dot  test.my_func.optimized.cfg.dot
src/cfg_optimizer/: __init__.py  analysis.py  ast_parser.py  benchmark.py  callgraph.py  cfg.py  cli.py  optimizer.py  render.py  visualize.py
tests/: test_pipeline.py
